# xrdp_local

./: .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD  README.md  xrdp_local.pro  xrdp_local.spec
.github/workflows/: build.yml
debian/: changelog  control  copyright  install  rules
src/: common.cpp  common.h  info.cpp  info.h  mock_config_ac.h  qt.cpp  qt.h  xrdp_local.cpp  xrdp_local.h  xup.cpp  xup.h
src/qt/: CMakeLists.txt  egl.cpp  egl.h  state.cpp  state.h  window.cpp  window.h
